--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_screenutil: ^5.5.3+2
-  flutter_svg: ^1.0.3
-  google_fonts: ^3.0.1
+  flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.9
+  google_fonts: ^6.1.0
+  http: ^1.2.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  dartz: ^0.10.1
+  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
